--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,14 @@ dependencies {
     compile 'commons-cli:commons-cli:1.3.1'
 
     testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.+"
+}
+
+run {
+//    if(project.hasProperty('args')){
+    def sargs = "-i 0 -c 1 -t 100"
+    args sargs.split('\\s')
+//    }
 }
 
 mainClassName = "hyflow.main.Main"
