--- a/caesar.properties
+++ b/caesar.properties
@@ -9,9 +9,9 @@
 
 # A process is described by:
 # process.<id> = <address>:<port for replicas>:<port for clients>
-process.0 = localhost:2021:3001
-process.1 = localhost:2022:3002
-process.2 = localhost:2023:3003
+process.0=h0-dfge:2021
+process.1=h1-dfge:2022
+process.2=h2-dfge:2023
 
 
 ### System model ###
