Parallel Implementation Done. Working. - Not very Performent

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,6 @@ startScripts {
 
 }
 
-applicationDefaultJvmArgs = ["-Xmx4096m", "-Xms2048m"]
+applicationDefaultJvmArgs = ["-Xmx4096m", "-Xms2048m", "-ea"]
 
 mainClassName = "hyflow.main.Main"
