Stable code. Partitioned access working. - Still to check normal behavior

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,6 @@ startScripts {
 
 }
 
-applicationDefaultJvmArgs = ["-Xmx4096m", "-Xms2048m", "-ea"]
+applicationDefaultJvmArgs = ["-Xmx50g", "-Xms50g", "-ea", "-Djava.util.concurrent.ForkJoinPool.common.parallelism=100"]
 
 mainClassName = "hyflow.main.Main"
