--- a/build.gradle
+++ b/build.gradle
@@ -17,48 +17,13 @@ dependencies {
 }
 
 //startScripts {
-//
-//    // Support closures to add an additional element to
-//    // CLASSPATH definition in the start script files.
-//    def configureClasspathVar = { findClasspath, pathSeparator, line ->
-//
-//        // Looking for the line that starts with either CLASSPATH=
-//        // or set CLASSPATH=, defined by the findClasspath closure argument.
-//        line = line.replaceAll(~/^${findClasspath}=.*$/) { original ->
-//
-//            // Get original line and append it
-//            // with the configuration directory.
-//            // Use specified path separator, which is different
-//            // for Windows or Unix systems.
-//            original += "${pathSeparator}\$APP_HOME/log4j2.xml"
-//        }
-//
-//    }
-//
-//    def configureUnixClasspath = configureClasspathVar.curry('CLASSPATH', ':')
-//    def configureWindowsClasspath = configureClasspathVar.curry('set CLASSPATH', ';')
-//
-//    // The default script content is generated and
-//    // with the doLast method we can still alter
-//    // the contents before the complete task ends.
+//    classpath += files('$APP_HOME/log4j2.xml')
 //    doLast {
-//
-//        // Alter the start script for Unix systems.
-//        unixScript.text =
-//                unixScript
-//                        .readLines()
-//                        .collect(configureUnixClasspath)
-//                        .join('\n')
-//
-//        // Alter the start script for Windows systems.
-//        windowsScript.text =
-//                windowsScript
-//                        .readLines()
-//                        .collect(configureWindowsClasspath)
-//                        .join('\r\n')
-//
+//        def windowsScriptFile = file getWindowsScript()
+//        def unixScriptFile    = file getUnixScript()
+//        windowsScriptFile.text = windowsScriptFile.text.replace('%APP_HOME%\\lib\\log4j2.xml', '%APP_HOME%\\log4j2.xml')
+//        unixScriptFile.text  = unixScriptFile.text.replace('$APP_HOME/lib/log4j2.xml', '$APP_HOME/log4j2.xml')
 //    }
-//
 //}
 
 task upload(type: Exec, dependsOn: distTar) {
@@ -67,7 +32,8 @@ task upload(type: Exec, dependsOn: distTar) {
 }
 
 //applicationDefaultJvmArgs = ["-ea", "-Djava.util.concurrent.ForkJoinPool.common.parallelism=100"]
-applicationDefaultJvmArgs = ["-Xmx7g", "-Xms5g", "-ea", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=200", "-XX:InitiatingHeapOccupancyPercent=90"]
+applicationDefaultJvmArgs = ["-Xmx25g", "-Xms20g", "-ea", "-XX:+UseG1GC",
+                             "-XX:MaxGCPauseMillis=200", "-XX:InitiatingHeapOccupancyPercent=70"]
 
 
 mainClassName = "hyflow.main.Main"
